@@ -205,6 +205,12 @@ task runProviderPactVerification(type: Test) {
     systemProperty 'pact.provider.version', project.pactVersion
 }
 
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
 runProviderPactVerification.dependsOn contract
 
 runProviderPactVerification.finalizedBy pactVerify
@@ -388,6 +394,7 @@ dependencies {
     testImplementation group: 'org.codehaus.groovy', name: 'groovy', version: '2.5.14'
     testImplementation group: 'org.codehaus.groovy', name: 'groovy-xml', version: '2.5.14'
     testImplementation group: 'org.codehaus.groovy', name: 'groovy-json', version: '2.5.14'
+    testCompile 'com.github.hmcts:fortify-client:1.2.0:all'
 
     contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'junit5', version: versions.pact_version
     contractTestRuntimeOnly group: 'au.com.dius.pact.consumer', name: 'junit5', version: versions.pact_version
